welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: ')' expected but 'var' found.
var dejafait:Int=0
^